syntax = "proto3";

package bookstore;

option go_package = "bookstore/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Bookstore {
  rpc ListShelves(google.protobuf.Empty) returns (ListShelvesResponse) {
    option (google.api.http) = {
      get : "/v1/shelves"
    };
  }

  rpc CreateShelf(CreateShelfRequest) returns (Shelf) {
    option (google.api.http) = {
      post : "/v1/shelves"
      body : "shelf"
    };
  }

  rpc GetShelf(GetShelfRequest) returns (Shelf) {
    option (google.api.http) = {
      get : "/v1/shelves/{shelf}"
    };
  }

  rpc DeleteShelf(DeleteShelfRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/v1/shelves/{shelf}"
    };
  }

  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {
    option (google.api.http) = {
      get : "/v1/shelves/{shelf}/books"
    };
  }

  rpc CreateBook(CreateBookRequest) returns (Book) {
    option (google.api.http) = {
      post : "/v1/shelves/{shelf}/books"
      body : "book"
    };
  }

  rpc GetBook(GetBookRequest) returns (Book) {
    option (google.api.http) = {
      get : "/v1/shelves/{shelf}/books/{book}"
    };
  }

  rpc DeleteBook(GetBookRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete : "/v1/shelves/{shelf}/books/{book}"
    };
  }
}

message Shelf {
  int64 id = 1;
  string theme = 2;
  int64 size = 3;
}

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
}

message ListShelvesResponse { repeated Shelf shelves = 1; }

message CreateShelfRequest { Shelf shelf = 1; }

message GetShelfRequest { int64 shelf = 1; }

message DeleteShelfRequest { int64 shelf = 1; }

message ListBooksRequest { int64 shelf = 1; }

message ListBooksResponse { repeated Book books = 1; }

message CreateBookRequest {
  int64 shelf = 1;
  Book book = 2;
}

message GetBookRequest {
  int64 shelf = 1;
  int64 book = 2;
}

message DeleteBookRequest {
  int64 shelf = 1;
  int64 book = 2;
}
